# revit_system_john_2022

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  package.json  pyproject.toml  pytest.ini  revit.py
.github/: PR_DESCRIPTION.md  REPOSITORY_DESCRIPTION.md
pages/: 1_Motherboard.py  2_Cpu.py  3_Graphic_card.py  7_Cost.py  cpu.py  graphic_card.py  harddisk.py  memory.py  motherboard.py  suggestion.py
tests/: conftest.py
tests/e2e/: conftest.py  test_streamlit_app.py
tests/features/: application.feature  components.feature
tests/step_defs/: test_application_steps.py  test_components_steps.py
