[tool.poetry]
name = "revit_system_john_2022"
version = "0.1.0"
description = ""
authors = ["victor <em3888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.10.0"
pandas = "^1.4.2"
watchdog = "^2.1.9"
plotly = "^5.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
